# gba-emu

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  DEVELOPMENT_SESSION_2025-12-22.md  README.md  TESTING_SUMMARY.md  vcpkg.json
.buildbouncer/: config.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/sdl/: main.cpp
assets/: README.md
docs/: BUILDING.md  BUS.md  CODING_GUIDELINES.md  CPU.md  GAMEPAK.md  MMU.md  PROJECT_ASSESSMENT.md  ROADMAP.md  TECHNICAL_OVERVIEW.md  TESTING.md  TEST_INFRASTRUCTURE.md
docs/adr/: 0001-architecture.md
scripts/: bootstrap-win.ps1  run_tests.ps1  run_tests.sh
src/core/bus/: bus.cpp  bus.h
src/core/cpu/: arm7tdmi.cpp  arm7tdmi.h
src/core/io/: io.cpp  io.h
src/core/mmu/: mmu.cpp  mmu.h
tests/: README.md  bios_load.cpp  cart_map.cpp  core_smoke.cpp  cpu_flags.cpp  cpu_thumb_alu.cpp  cpu_thumb_format2.cpp  cpu_thumb_format5.cpp  cpu_thumb_loadstore.cpp  cpu_thumb_loadstore_byte.cpp  cpu_thumb_smoke.cpp  io_regs.cpp  mmu_map.cpp  mmu_width.cpp
